--- a/style6.css
+++ b/style6.css
@@ -5,15 +5,29 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 #header {
+    text-align: center;
     background-color: lightblue;
 }
 #sidebar {
+    width: 25%;
+    float: left;
     background-color: lightcoral;
 }
 #main {
+    width: 75%;
+    float: right;
     background-color: lightpink;
 }
 #footer {
     clear: both;
+    padding: 20px;
+    text-align: center;
     background-color: lightgoldenrodyellow;
+}
+li {
+    padding: 10px;
+}
+li:hover {
+    font-weight: hold;
+    background-color: brown;
 }
