--- a/style6b.css
+++ b/style6b.css
@@ -39,3 +39,12 @@ img {
     width: 200px;
     margin: 10px;
 }
+logo {
+    float: left;
+    margin-right: 20px;
+    max-width: 100px;
+    height: auto;
+}
+h1 {
+    line-height: 100px;
+}
