--- a/responsive.css
+++ b/responsive.css
@@ -2,4 +2,33 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    background-color: #cdcdcd;
+    padding: 25px;
+    text-align: center;
+}
+
+main {
+    display: flex;
+    gap: 20px;
+}
+
+main div {
+    padding: 15px;
+}
+
+footer {
+    background-color: #454545;
+    color: white;
+    text-align: center;
+    padding: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+    main {
+        flex-direction: column;
+    }
 }
